:lipstick: remove buggy scrollbar bug

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -20,4 +20,5 @@ body {
 
 .custom-dialog-container .mat-dialog-container {
   padding: 0px !important;
+  overflow-x: hidden;
 }
